--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -17,17 +17,9 @@
    "source": [
     "import Dek_functies as dek\n",
     "import Kaart_class as cards\n",
-    "import pygame, time, sys\n",
-    "import random\n",
-    "import Display_functies as disp"
+    "import Display_functies as disp\n",
+    "import time, sys, random, pygame"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -54,57 +46,43 @@
     "pleky, plekx = disp.locatie_kaarten(X,Y)\n",
     "\n",
     "gekozen_kaarten = []\n",
-    "punten = 0\n",
-    "\n",
-    "i = 0"
+    "punten = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n",
-      "0\n",
-      "[1, 4]\n",
-      "0\n",
-      "[1, 4, 5]\n",
-      "0\n",
+      "[6]\n",
+      "[6, 7]\n",
+      "[6, 7, 8]\n",
       "[5]\n",
-      "0\n",
       "[5]\n",
-      "0\n",
       "[5]\n",
-      "0\n",
-      "[5]\n",
-      "0\n",
-      "[5]\n",
-      "0\n",
       "[5, 4]\n",
-      "0\n",
       "[5, 4]\n",
-      "0\n",
-      "[5, 4, 3]\n",
-      "0\n",
+      "[5, 4]\n",
+      "[5, 4]\n",
+      "[5, 4, 7]\n",
+      "[10]\n",
+      "[10]\n",
+      "[10]\n",
+      "[10, 4]\n",
+      "[10, 4, 5]\n",
+      "[8]\n",
+      "[8, 10]\n",
+      "[8, 10, 4]\n",
+      "[10]\n",
+      "[10, 3]\n",
+      "[10, 3]\n",
+      "[10, 3, 11]\n",
       "[3]\n",
-      "0\n",
-      "[3]\n",
-      "0\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "display Surface quit",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-0fa532897555>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# vul je scherm zwart\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[0mdisplay_surface\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzwart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m# plak de afbeeldingen van de twaalf kaarten op de locaties die we eerder met de functie locatie_kaarten hebben bepaald\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31merror\u001b[0m: display Surface quit"
+      "[3, 5]\n"
      ]
     }
    ],
@@ -112,7 +90,7 @@
     "pygame.init() \n",
     "\n",
     "clock = pygame.time.Clock()\n",
-    "  \n",
+    "clock.tick(60)\n",
     "# maak een scherm van grootte X bij Y \n",
     "display_surface = pygame.display.set_mode((X, Y )) \n",
     "\n",
@@ -121,6 +99,7 @@
     "pygame.display.set_caption('SET') \n",
     "\n",
     "while True : \n",
+    "    \n",
     "# vul je scherm zwart\n",
     "    display_surface.fill(zwart) \n",
     "\n",
@@ -130,7 +109,7 @@
     "        for x in range(0,3):\n",
     "            display_surface.blit(gedeelde_kaarten[nummer].image, (plekx[x], pleky[y]))\n",
     "            nummer+=1\n",
-    "    \n",
+    "    positie_muis = pygame.mouse.get_pos()\n",
     "#puntentelling    \n",
     "    myFont = pygame.font.SysFont(\"Impact\", 24)\n",
     "    diceDisplay = myFont.render('Aantal punten: '+str(punten), 1, (255,0,0))\n",
@@ -144,39 +123,41 @@
     "    else:\n",
     "        text = myFont.render(\"Te laat!\", 1, (255,0,0))\n",
     "        display_surface.blit(text, (plekx[2], 15))\n",
-    "        dek.geen_set_gedeeld(gedeelde_kaarten, alle_kaarten)\n",
+    "        dek.set_vervangen(gedeelde_kaarten, alle_kaarten)\n",
     "        tijd_over=31\n",
     "        punten -= 1\n",
+    "        gevonden_sets = dek.alle_sets_vinden(alle_kaarten)\n",
     "        gekozen_kaarten = []\n",
     "    pygame.display.update()\n",
     "\n",
     "    # Haal alle events op\n",
     "    for event in pygame.event.get() : \n",
     "            \n",
-    "        if event.type == pygame.MOUSEBUTTONUP: #Als er op muis is geklikt\n",
-    "            positie_muis = pygame.mouse.get_pos() #haal (x,y) van muis op   \n",
+    "        if event.type == pygame.MOUSEBUTTONDOWN: #Als er op muis is geklikt\n",
+    "            #haal (x,y) van muis op   \n",
     "            klik_locatie = disp.waar_geklikt(positie_muis, plekx, pleky)\n",
     "            if klik_locatie is not \"zwart\": #als op een kaart geklikt\n",
     "                if klik_locatie not in gekozen_kaarten:\n",
     "                    gekozen_kaarten.append(klik_locatie)  \n",
     "                \n",
     "                print(gekozen_kaarten)\n",
-    "                positie_muis = 0\n",
+    "                positie_muis = [0,0]\n",
     "                klik_locatie = 0\n",
     "\n",
     "            #zodra er drie kaarten zijn gevonden\n",
     "            if len(gekozen_kaarten) == 3:\n",
     "                gekozen_kaarten.sort()\n",
-    "                klopt = dek.set_aanwijzen(gedeelde_kaarten, gekozen_kaarten)\n",
+    "                klopt = dek.set_aanwijzen(gevonden_sets, gekozen_kaarten)\n",
     "                if klopt == True:\n",
     "                    tijd_over = 31\n",
-    "                    dek.set_vervangen(gedeelde_kaarten, gekozen_kaarten, alle_kaarten)\n",
+    "                    dek.set_vervangen(gedeelde_kaarten, alle_kaarten, gekozen_kaarten)\n",
     "                    punten += 1\n",
+    "                    gevonden_sets = dek.alle_sets_vinden(alle_kaarten)\n",
     "                else:\n",
     "                    punten -= 1\n",
     "                i = 0\n",
     "                gekozen_kaarten = []\n",
-    "                positie_muis = 0\n",
+    "                positie_muis = [0,0]\n",
     "                klik_locatie = 0\n",
     "        \n",
     "        # if event object type is QUIT \n",
@@ -227,13 +208,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
