--- a/Demo display.ipynb
+++ b/Demo display.ipynb
@@ -46,79 +46,92 @@
     "pleky, plekx = disp.locatie_kaarten(X,Y)\n",
     "\n",
     "gekozen_kaarten = []\n",
-    "punten = 0\n"
+    "punten = 0\n",
+    "\n",
+    "change = True\n",
+    "clock_change = True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### functie om spel te tekenen. Tekenen niet te vaak doen want langzaam en 60 keer per seconden\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def teken_spel(clock_change, text):\n",
+    "    display_surface.fill(zwart)\n",
+    "    if clock_change is True:\n",
+    "        display_surface.blit(text, (plekx[2],15))\n",
+    "    nummer = 0\n",
+    "    for y in range(0,4):\n",
+    "        for x in range(0,3):\n",
+    "            display_surface.blit(gedeelde_kaarten[nummer].image, (plekx[x], pleky[y]))\n",
+    "            nummer+=1\n",
+    "    display_surface.blit(diceDisplay,(50,15))\n",
+    "    pygame.display.update()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6]\n",
-      "[6, 7]\n",
-      "[6, 7, 8]\n",
-      "[5]\n",
-      "[5]\n",
-      "[5]\n",
-      "[5, 4]\n",
-      "[5, 4]\n",
-      "[5, 4]\n",
-      "[5, 4]\n",
-      "[5, 4, 7]\n",
-      "[10]\n",
-      "[10]\n",
-      "[10]\n",
-      "[10, 4]\n",
-      "[10, 4, 5]\n",
-      "[8]\n",
-      "[8, 10]\n",
-      "[8, 10, 4]\n",
-      "[10]\n",
-      "[10, 3]\n",
-      "[10, 3]\n",
-      "[10, 3, 11]\n",
-      "[3]\n",
-      "[3, 5]\n"
+     "ename": "AttributeError",
+     "evalue": "module 'time' has no attribute 'delay'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-c4e14d5a5ffd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m# plak de afbeeldingen van de twaalf kaarten op de locaties die we eerder met de functie locatie_kaarten hebben bepaald\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'time' has no attribute 'delay'"
      ]
     }
    ],
    "source": [
     "pygame.init() \n",
     "\n",
+    "myFont = pygame.font.SysFont(\"Impact\", 24)\n",
+    "text = myFont.render((\"Tijd: \" + str(tijd_over)  +\" seconden\"), 1, (255,0,0))\n",
+    "diceDisplay = myFont.render('Aantal punten: '+str(punten), 1, (255,0,0))\n",
     "clock = pygame.time.Clock()\n",
     "clock.tick(60)\n",
-    "# maak een scherm van grootte X bij Y \n",
+    "\n",
+    "# maak een scherm van grootte X bij Y en vul met zwart\n",
+    "pygame.display.set_caption('SET')\n",
     "display_surface = pygame.display.set_mode((X, Y )) \n",
-    "\n",
+    "display_surface.fill(zwart)\n",
     "  \n",
-    "# geef je scherm een naam\n",
-    "pygame.display.set_caption('SET') \n",
+    "# geef je scherm een naam \n",
     "\n",
-    "while True : \n",
+    "\n",
+    "while True :  \n",
+    "\n",
+    "# Druk alleen nieuwe dingen af als er verandering is.\n",
+    "    if change is True:\n",
+    "        teken_spel(clock_change, text)\n",
+    "        clock_change = False\n",
+    "    change = False\n",
     "    \n",
-    "# vul je scherm zwart\n",
-    "    display_surface.fill(zwart) \n",
-    "\n",
-    "# plak de afbeeldingen van de twaalf kaarten op de locaties die we eerder met de functie locatie_kaarten hebben bepaald\n",
-    "    nummer = 0\n",
-    "    for y in range(0,4):\n",
-    "        for x in range(0,3):\n",
-    "            display_surface.blit(gedeelde_kaarten[nummer].image, (plekx[x], pleky[y]))\n",
-    "            nummer+=1\n",
-    "    positie_muis = pygame.mouse.get_pos()\n",
-    "#puntentelling    \n",
-    "    myFont = pygame.font.SysFont(\"Impact\", 24)\n",
+    "    \n",
+    "    \n",
+    "#puntentelling en timer \n",
     "    diceDisplay = myFont.render('Aantal punten: '+str(punten), 1, (255,0,0))\n",
-    "    display_surface.blit(diceDisplay,(50,15))\n",
     "    tijd_over -= 1\n",
     "    if tijd_over > 0:\n",
     "        text = myFont.render((\"Tijd: \" + str(tijd_over)  +\" seconden\"), 1, (255,0,0))\n",
     "        display_surface.blit(text, (plekx[2],15))\n",
-    "        pygame.display.flip()\n",
+    "        clock_change = True\n",
+    "        change = True\n",
     "        time.sleep(1)\n",
     "    else:\n",
     "        text = myFont.render(\"Te laat!\", 1, (255,0,0))\n",
@@ -128,11 +141,11 @@
     "        punten -= 1\n",
     "        gevonden_sets = dek.alle_sets_vinden(alle_kaarten)\n",
     "        gekozen_kaarten = []\n",
-    "    pygame.display.update()\n",
-    "\n",
+    "        clock_change = True\n",
+    "        change = True\n",
     "    # Haal alle events op\n",
     "    for event in pygame.event.get() : \n",
-    "            \n",
+    "        positie_muis = pygame.mouse.get_pos()    \n",
     "        if event.type == pygame.MOUSEBUTTONDOWN: #Als er op muis is geklikt\n",
     "            #haal (x,y) van muis op   \n",
     "            klik_locatie = disp.waar_geklikt(positie_muis, plekx, pleky)\n",
@@ -141,7 +154,6 @@
     "                    gekozen_kaarten.append(klik_locatie)  \n",
     "                \n",
     "                print(gekozen_kaarten)\n",
-    "                positie_muis = [0,0]\n",
     "                klik_locatie = 0\n",
     "\n",
     "            #zodra er drie kaarten zijn gevonden\n",
@@ -153,13 +165,13 @@
     "                    dek.set_vervangen(gedeelde_kaarten, alle_kaarten, gekozen_kaarten)\n",
     "                    punten += 1\n",
     "                    gevonden_sets = dek.alle_sets_vinden(alle_kaarten)\n",
+    "                    change = True\n",
     "                else:\n",
     "                    punten -= 1\n",
+    "                    change = True\n",
     "                i = 0\n",
     "                gekozen_kaarten = []\n",
-    "                positie_muis = [0,0]\n",
     "                klik_locatie = 0\n",
-    "        \n",
     "        # if event object type is QUIT \n",
     "        # then quitting the pygame \n",
     "        # and program both. \n",
@@ -208,6 +220,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
